--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "turbo": "^2.5.0",
     "vercel": "^41.4.1"
   },
   "devDependencies": {
