--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "15.2.4",
+    "notyf": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "turbo": "^2.5.0",
