--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "notyf": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "turbo": "^2.5.0",
     "vercel": "^41.4.1"
   },
