--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "tailwind-scrollbar": "^4.0.2",
     "turbo": "^2.5.0",
     "vercel": "^41.4.1"
   },
